--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 </head>
 
 <body>
-    <script src="./assets/scripts/app.js"></script>
+    <div class="container">
+        <div class="video-container" id="video-container">
+            <video controls class="video" id="video" preload="metadata">
+                <source src="./assets/media/testvideo.webm" type="video/webm">
+                </source>
+            </video>
+        </div>
+    </div>
+
 </body>
 
 </html>
