--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image" href="./assets/media/favicon (1).ico">
     <link rel="stylesheet" href="./assets/style/style.css">
     <title>Custom Video Player</title>
 </head>
@@ -30,14 +31,14 @@
                 </div>
                 <div class="bottom-controls">
                     <div class="left-controls">
-                        <button data-title="Play (K)" id="play">
+                        <button data-title="Play (k)" id="play">
                             <svg class="playback-icons">
                                 <use href="#play-icon"></use>
                                 <use class="hidden" href="#pause"></use>
                             </svg>
                         </button>
                         <div class="volume-controls">
-                            <button data-title="Mute (M)" class="volume-button" id="volume-button">
+                            <button data-title="Mute (m)" class="volume-button" id="volume-button">
                                 <svg>
                                     <use class="hidden" href="#volume-mute"></use>
                                     <use class="hidden" href="#volume-low"></use>
@@ -54,7 +55,7 @@
                         </div>
                     </div>
                     <div class="right-controls">
-                        <button data-title="Full screen (F)" class="fullscreen-button" id="fullscreen-button">
+                        <button data-title="Full screen (f)" class="fullscreen-button" id="fullscreen-button">
                             <svg>
                                 <use href="#fullscreen"></use>
                                 <use href="#fullscreen-exit" class="hidden"></use>
@@ -65,6 +66,7 @@
             </div>
         </div>
     </div>
+
     <!--Importing Icons Symbols SVG-->
     <svg style="display: none">
         <defs>
@@ -109,6 +111,7 @@
     <script src="./assets/scripts/app.js"></script>
     <script src="./assets/scripts/video.js"></script>
     <script src="./assets/scripts/sound.js"></script>
+    <script src="./assets/scripts/keyevent.js"></script>
 </body>
 
 </html>
