enabling hide for playback speed

--- a/index.html
+++ b/index.html
@@ -66,16 +66,17 @@
                         </button>
                     </div>
                 </div>
+                <div class="playback-rate-buttons" id="rate">
+                    <div class="playback">Playback Speed</div>
+                    <button class="zerofive" id="zerofive">0.5x</button>
+                    <button class="zerosevenfive" id="zerosevenfive">0.75x</button>
+                    <button class="normal" id="normal">1.0x</button>
+                    <button class="onefive" id="onefive">1.5x</button>
+                    <button class="two" id="double">2.0x</button>
+                </div>
             </div>
         </div>
-        <p>Playback Rate :</p>
-        <div class="playback-rate-buttons">
-            <button class="zerofive">0.5x</button>
-            <button class="zerosevenfive">0.75x</button>
-            <button class="normal">1.0x</button>
-            <button class="onefive">1.5x</button>
-            <button class="two">2.0x</button>
-        </div>
+
     </div>
 
 
