add/remove playback rate fix

--- a/index.html
+++ b/index.html
@@ -67,18 +67,19 @@
                     </div>
                 </div>
                 <div class="playback-rate-buttons" id="rate">
-                    <div class="playback">Playback Speed</div>
-                    <button class="zerofive" id="zerofive">0.5x</button>
-                    <button class="zerosevenfive" id="zerosevenfive">0.75x</button>
-                    <button class="normal" id="normal">1.0x</button>
-                    <button class="onefive" id="onefive">1.5x</button>
-                    <button class="two" id="double">2.0x</button>
+                    <div onclick="showHide()" class="playback">Playback Speed</div>
+                    <!-- <button onclick="showHide()">Playback Speed</button> -->
+                    <div class="rate-buttons" id="rate-buttons" style="display: none;">
+                        <button class="zerofive" id="zerofive">0.5x</button>
+                        <button class="zerosevenfive" id="zerosevenfive">0.75x</button>
+                        <button class="normal" id="normal">1.0x</button>
+                        <button class="onefive" id="onefive">1.5x</button>
+                        <button class="two" id="double">2.0x</button>
+                    </div>
                 </div>
             </div>
         </div>
-
     </div>
-
 
     <!--Importing Icons Symbols SVG-->
     <svg style="display: none">
