added button for playback rate, rate reseting on refresh and play

--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
                     </div>
                 </div>
                 <div class="playback-rate-buttons" id="rate">
-                    <div onclick="showHide()" class="playback">Playback Speed</div>
-                    <!-- <button onclick="showHide()">Playback Speed</button> -->
+                    <div onclick="showHide()" class="playback">
+                        <img src="./assets/media/setting.svg" alt="settingbutton">
+                    </div>
                     <div class="rate-buttons" id="rate-buttons" style="display: none;">
                         <button class="zerofive" id="zerofive">0.5x</button>
                         <button class="zerosevenfive" id="zerosevenfive">0.75x</button>
@@ -76,6 +77,7 @@
                         <button class="onefive" id="onefive">1.5x</button>
                         <button class="two" id="double">2.0x</button>
                     </div>
+
                 </div>
             </div>
         </div>
